parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    COMA
    DIF
    IGUAL
    MAYOR
    MAYORIGUAL
    MENOR
    MENORIGUAL
    OR

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaraciones
Rule 2     programa -> declaraciones sentencias
Rule 3     declaraciones -> declaraciones declaracion
Rule 4     declaraciones -> declaracion
Rule 5     declaracion -> TIPO ID PUNTOYCOMA
Rule 6     sentencias -> sentencias sentencia
Rule 7     sentencias -> sentencia
Rule 8     sentencia -> asignacion
Rule 9     sentencia -> ciclo_for
Rule 10    asignacion -> ID ASIGNACION expresion PUNTOYCOMA
Rule 11    expresion -> ID
Rule 12    expresion -> CADENA
Rule 13    expresion -> ENTERO
Rule 14    expresion -> REAL
Rule 15    expresion -> expresion MAS expresion
Rule 16    expresion -> expresion MENOS expresion
Rule 17    expresion -> expresion MULT expresion
Rule 18    expresion -> expresion DIV expresion
Rule 19    expresion -> expresion MOD expresion
Rule 20    ciclo_for -> FOR LPAREN asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion RPAREN LBRACE sentencias RBRACE

Terminals, with rules where they appear

AND                  : 
ASIGNACION           : 10
CADENA               : 12
COMA                 : 
DIF                  : 
DIV                  : 18
ENTERO               : 13
FOR                  : 20
ID                   : 5 10 11
IGUAL                : 
LBRACE               : 20
LPAREN               : 20
MAS                  : 15
MAYOR                : 
MAYORIGUAL           : 
MENOR                : 
MENORIGUAL           : 
MENOS                : 16
MOD                  : 19
MULT                 : 17
OR                   : 
PUNTOYCOMA           : 5 10 20 20
RBRACE               : 20
REAL                 : 14
RPAREN               : 20
TIPO                 : 5
error                : 

Nonterminals, with rules where they appear

asignacion           : 8 20 20
ciclo_for            : 9
declaracion          : 3 4
declaraciones        : 1 2 3
expresion            : 10 15 15 16 16 17 17 18 18 19 19 20
programa             : 0
sentencia            : 6 7
sentencias           : 2 6 20

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaraciones
    (2) programa -> . declaraciones sentencias
    (3) declaraciones -> . declaraciones declaracion
    (4) declaraciones -> . declaracion
    (5) declaracion -> . TIPO ID PUNTOYCOMA

    TIPO            shift and go to state 4

    programa                       shift and go to state 1
    declaraciones                  shift and go to state 2
    declaracion                    shift and go to state 3

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaraciones .
    (2) programa -> declaraciones . sentencias
    (3) declaraciones -> declaraciones . declaracion
    (6) sentencias -> . sentencias sentencia
    (7) sentencias -> . sentencia
    (5) declaracion -> . TIPO ID PUNTOYCOMA
    (8) sentencia -> . asignacion
    (9) sentencia -> . ciclo_for
    (10) asignacion -> . ID ASIGNACION expresion PUNTOYCOMA
    (20) ciclo_for -> . FOR LPAREN asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion RPAREN LBRACE sentencias RBRACE

    $end            reduce using rule 1 (programa -> declaraciones .)
    TIPO            shift and go to state 4
    ID              shift and go to state 8
    FOR             shift and go to state 11

    sentencias                     shift and go to state 5
    declaracion                    shift and go to state 6
    sentencia                      shift and go to state 7
    asignacion                     shift and go to state 9
    ciclo_for                      shift and go to state 10

state 3

    (4) declaraciones -> declaracion .

    TIPO            reduce using rule 4 (declaraciones -> declaracion .)
    ID              reduce using rule 4 (declaraciones -> declaracion .)
    FOR             reduce using rule 4 (declaraciones -> declaracion .)
    $end            reduce using rule 4 (declaraciones -> declaracion .)


state 4

    (5) declaracion -> TIPO . ID PUNTOYCOMA

    ID              shift and go to state 12


state 5

    (2) programa -> declaraciones sentencias .
    (6) sentencias -> sentencias . sentencia
    (8) sentencia -> . asignacion
    (9) sentencia -> . ciclo_for
    (10) asignacion -> . ID ASIGNACION expresion PUNTOYCOMA
    (20) ciclo_for -> . FOR LPAREN asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion RPAREN LBRACE sentencias RBRACE

    $end            reduce using rule 2 (programa -> declaraciones sentencias .)
    ID              shift and go to state 8
    FOR             shift and go to state 11

    sentencia                      shift and go to state 13
    asignacion                     shift and go to state 9
    ciclo_for                      shift and go to state 10

state 6

    (3) declaraciones -> declaraciones declaracion .

    TIPO            reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    ID              reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    FOR             reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    $end            reduce using rule 3 (declaraciones -> declaraciones declaracion .)


state 7

    (7) sentencias -> sentencia .

    ID              reduce using rule 7 (sentencias -> sentencia .)
    FOR             reduce using rule 7 (sentencias -> sentencia .)
    $end            reduce using rule 7 (sentencias -> sentencia .)
    RBRACE          reduce using rule 7 (sentencias -> sentencia .)


state 8

    (10) asignacion -> ID . ASIGNACION expresion PUNTOYCOMA

    ASIGNACION      shift and go to state 14


state 9

    (8) sentencia -> asignacion .

    ID              reduce using rule 8 (sentencia -> asignacion .)
    FOR             reduce using rule 8 (sentencia -> asignacion .)
    $end            reduce using rule 8 (sentencia -> asignacion .)
    RBRACE          reduce using rule 8 (sentencia -> asignacion .)


state 10

    (9) sentencia -> ciclo_for .

    ID              reduce using rule 9 (sentencia -> ciclo_for .)
    FOR             reduce using rule 9 (sentencia -> ciclo_for .)
    $end            reduce using rule 9 (sentencia -> ciclo_for .)
    RBRACE          reduce using rule 9 (sentencia -> ciclo_for .)


state 11

    (20) ciclo_for -> FOR . LPAREN asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion RPAREN LBRACE sentencias RBRACE

    LPAREN          shift and go to state 15


state 12

    (5) declaracion -> TIPO ID . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 16


state 13

    (6) sentencias -> sentencias sentencia .

    ID              reduce using rule 6 (sentencias -> sentencias sentencia .)
    FOR             reduce using rule 6 (sentencias -> sentencias sentencia .)
    $end            reduce using rule 6 (sentencias -> sentencias sentencia .)
    RBRACE          reduce using rule 6 (sentencias -> sentencias sentencia .)


state 14

    (10) asignacion -> ID ASIGNACION . expresion PUNTOYCOMA
    (11) expresion -> . ID
    (12) expresion -> . CADENA
    (13) expresion -> . ENTERO
    (14) expresion -> . REAL
    (15) expresion -> . expresion MAS expresion
    (16) expresion -> . expresion MENOS expresion
    (17) expresion -> . expresion MULT expresion
    (18) expresion -> . expresion DIV expresion
    (19) expresion -> . expresion MOD expresion

    ID              shift and go to state 17
    CADENA          shift and go to state 19
    ENTERO          shift and go to state 20
    REAL            shift and go to state 21

    expresion                      shift and go to state 18

state 15

    (20) ciclo_for -> FOR LPAREN . asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion RPAREN LBRACE sentencias RBRACE
    (10) asignacion -> . ID ASIGNACION expresion PUNTOYCOMA

    ID              shift and go to state 8

    asignacion                     shift and go to state 22

state 16

    (5) declaracion -> TIPO ID PUNTOYCOMA .

    TIPO            reduce using rule 5 (declaracion -> TIPO ID PUNTOYCOMA .)
    ID              reduce using rule 5 (declaracion -> TIPO ID PUNTOYCOMA .)
    FOR             reduce using rule 5 (declaracion -> TIPO ID PUNTOYCOMA .)
    $end            reduce using rule 5 (declaracion -> TIPO ID PUNTOYCOMA .)


state 17

    (11) expresion -> ID .

    PUNTOYCOMA      reduce using rule 11 (expresion -> ID .)
    MAS             reduce using rule 11 (expresion -> ID .)
    MENOS           reduce using rule 11 (expresion -> ID .)
    MULT            reduce using rule 11 (expresion -> ID .)
    DIV             reduce using rule 11 (expresion -> ID .)
    MOD             reduce using rule 11 (expresion -> ID .)


state 18

    (10) asignacion -> ID ASIGNACION expresion . PUNTOYCOMA
    (15) expresion -> expresion . MAS expresion
    (16) expresion -> expresion . MENOS expresion
    (17) expresion -> expresion . MULT expresion
    (18) expresion -> expresion . DIV expresion
    (19) expresion -> expresion . MOD expresion

    PUNTOYCOMA      shift and go to state 23
    MAS             shift and go to state 24
    MENOS           shift and go to state 25
    MULT            shift and go to state 26
    DIV             shift and go to state 27
    MOD             shift and go to state 28


state 19

    (12) expresion -> CADENA .

    PUNTOYCOMA      reduce using rule 12 (expresion -> CADENA .)
    MAS             reduce using rule 12 (expresion -> CADENA .)
    MENOS           reduce using rule 12 (expresion -> CADENA .)
    MULT            reduce using rule 12 (expresion -> CADENA .)
    DIV             reduce using rule 12 (expresion -> CADENA .)
    MOD             reduce using rule 12 (expresion -> CADENA .)


state 20

    (13) expresion -> ENTERO .

    PUNTOYCOMA      reduce using rule 13 (expresion -> ENTERO .)
    MAS             reduce using rule 13 (expresion -> ENTERO .)
    MENOS           reduce using rule 13 (expresion -> ENTERO .)
    MULT            reduce using rule 13 (expresion -> ENTERO .)
    DIV             reduce using rule 13 (expresion -> ENTERO .)
    MOD             reduce using rule 13 (expresion -> ENTERO .)


state 21

    (14) expresion -> REAL .

    PUNTOYCOMA      reduce using rule 14 (expresion -> REAL .)
    MAS             reduce using rule 14 (expresion -> REAL .)
    MENOS           reduce using rule 14 (expresion -> REAL .)
    MULT            reduce using rule 14 (expresion -> REAL .)
    DIV             reduce using rule 14 (expresion -> REAL .)
    MOD             reduce using rule 14 (expresion -> REAL .)


state 22

    (20) ciclo_for -> FOR LPAREN asignacion . PUNTOYCOMA expresion PUNTOYCOMA asignacion RPAREN LBRACE sentencias RBRACE

    PUNTOYCOMA      shift and go to state 29


state 23

    (10) asignacion -> ID ASIGNACION expresion PUNTOYCOMA .

    ID              reduce using rule 10 (asignacion -> ID ASIGNACION expresion PUNTOYCOMA .)
    FOR             reduce using rule 10 (asignacion -> ID ASIGNACION expresion PUNTOYCOMA .)
    $end            reduce using rule 10 (asignacion -> ID ASIGNACION expresion PUNTOYCOMA .)
    PUNTOYCOMA      reduce using rule 10 (asignacion -> ID ASIGNACION expresion PUNTOYCOMA .)
    RPAREN          reduce using rule 10 (asignacion -> ID ASIGNACION expresion PUNTOYCOMA .)
    RBRACE          reduce using rule 10 (asignacion -> ID ASIGNACION expresion PUNTOYCOMA .)


state 24

    (15) expresion -> expresion MAS . expresion
    (11) expresion -> . ID
    (12) expresion -> . CADENA
    (13) expresion -> . ENTERO
    (14) expresion -> . REAL
    (15) expresion -> . expresion MAS expresion
    (16) expresion -> . expresion MENOS expresion
    (17) expresion -> . expresion MULT expresion
    (18) expresion -> . expresion DIV expresion
    (19) expresion -> . expresion MOD expresion

    ID              shift and go to state 17
    CADENA          shift and go to state 19
    ENTERO          shift and go to state 20
    REAL            shift and go to state 21

    expresion                      shift and go to state 30

state 25

    (16) expresion -> expresion MENOS . expresion
    (11) expresion -> . ID
    (12) expresion -> . CADENA
    (13) expresion -> . ENTERO
    (14) expresion -> . REAL
    (15) expresion -> . expresion MAS expresion
    (16) expresion -> . expresion MENOS expresion
    (17) expresion -> . expresion MULT expresion
    (18) expresion -> . expresion DIV expresion
    (19) expresion -> . expresion MOD expresion

    ID              shift and go to state 17
    CADENA          shift and go to state 19
    ENTERO          shift and go to state 20
    REAL            shift and go to state 21

    expresion                      shift and go to state 31

state 26

    (17) expresion -> expresion MULT . expresion
    (11) expresion -> . ID
    (12) expresion -> . CADENA
    (13) expresion -> . ENTERO
    (14) expresion -> . REAL
    (15) expresion -> . expresion MAS expresion
    (16) expresion -> . expresion MENOS expresion
    (17) expresion -> . expresion MULT expresion
    (18) expresion -> . expresion DIV expresion
    (19) expresion -> . expresion MOD expresion

    ID              shift and go to state 17
    CADENA          shift and go to state 19
    ENTERO          shift and go to state 20
    REAL            shift and go to state 21

    expresion                      shift and go to state 32

state 27

    (18) expresion -> expresion DIV . expresion
    (11) expresion -> . ID
    (12) expresion -> . CADENA
    (13) expresion -> . ENTERO
    (14) expresion -> . REAL
    (15) expresion -> . expresion MAS expresion
    (16) expresion -> . expresion MENOS expresion
    (17) expresion -> . expresion MULT expresion
    (18) expresion -> . expresion DIV expresion
    (19) expresion -> . expresion MOD expresion

    ID              shift and go to state 17
    CADENA          shift and go to state 19
    ENTERO          shift and go to state 20
    REAL            shift and go to state 21

    expresion                      shift and go to state 33

state 28

    (19) expresion -> expresion MOD . expresion
    (11) expresion -> . ID
    (12) expresion -> . CADENA
    (13) expresion -> . ENTERO
    (14) expresion -> . REAL
    (15) expresion -> . expresion MAS expresion
    (16) expresion -> . expresion MENOS expresion
    (17) expresion -> . expresion MULT expresion
    (18) expresion -> . expresion DIV expresion
    (19) expresion -> . expresion MOD expresion

    ID              shift and go to state 17
    CADENA          shift and go to state 19
    ENTERO          shift and go to state 20
    REAL            shift and go to state 21

    expresion                      shift and go to state 34

state 29

    (20) ciclo_for -> FOR LPAREN asignacion PUNTOYCOMA . expresion PUNTOYCOMA asignacion RPAREN LBRACE sentencias RBRACE
    (11) expresion -> . ID
    (12) expresion -> . CADENA
    (13) expresion -> . ENTERO
    (14) expresion -> . REAL
    (15) expresion -> . expresion MAS expresion
    (16) expresion -> . expresion MENOS expresion
    (17) expresion -> . expresion MULT expresion
    (18) expresion -> . expresion DIV expresion
    (19) expresion -> . expresion MOD expresion

    ID              shift and go to state 17
    CADENA          shift and go to state 19
    ENTERO          shift and go to state 20
    REAL            shift and go to state 21

    expresion                      shift and go to state 35

state 30

    (15) expresion -> expresion MAS expresion .
    (15) expresion -> expresion . MAS expresion
    (16) expresion -> expresion . MENOS expresion
    (17) expresion -> expresion . MULT expresion
    (18) expresion -> expresion . DIV expresion
    (19) expresion -> expresion . MOD expresion

    PUNTOYCOMA      reduce using rule 15 (expresion -> expresion MAS expresion .)
    MAS             reduce using rule 15 (expresion -> expresion MAS expresion .)
    MENOS           reduce using rule 15 (expresion -> expresion MAS expresion .)
    MULT            shift and go to state 26
    DIV             shift and go to state 27
    MOD             shift and go to state 28

  ! MULT            [ reduce using rule 15 (expresion -> expresion MAS expresion .) ]
  ! DIV             [ reduce using rule 15 (expresion -> expresion MAS expresion .) ]
  ! MOD             [ reduce using rule 15 (expresion -> expresion MAS expresion .) ]
  ! MAS             [ shift and go to state 24 ]
  ! MENOS           [ shift and go to state 25 ]


state 31

    (16) expresion -> expresion MENOS expresion .
    (15) expresion -> expresion . MAS expresion
    (16) expresion -> expresion . MENOS expresion
    (17) expresion -> expresion . MULT expresion
    (18) expresion -> expresion . DIV expresion
    (19) expresion -> expresion . MOD expresion

    PUNTOYCOMA      reduce using rule 16 (expresion -> expresion MENOS expresion .)
    MAS             reduce using rule 16 (expresion -> expresion MENOS expresion .)
    MENOS           reduce using rule 16 (expresion -> expresion MENOS expresion .)
    MULT            shift and go to state 26
    DIV             shift and go to state 27
    MOD             shift and go to state 28

  ! MULT            [ reduce using rule 16 (expresion -> expresion MENOS expresion .) ]
  ! DIV             [ reduce using rule 16 (expresion -> expresion MENOS expresion .) ]
  ! MOD             [ reduce using rule 16 (expresion -> expresion MENOS expresion .) ]
  ! MAS             [ shift and go to state 24 ]
  ! MENOS           [ shift and go to state 25 ]


state 32

    (17) expresion -> expresion MULT expresion .
    (15) expresion -> expresion . MAS expresion
    (16) expresion -> expresion . MENOS expresion
    (17) expresion -> expresion . MULT expresion
    (18) expresion -> expresion . DIV expresion
    (19) expresion -> expresion . MOD expresion

    PUNTOYCOMA      reduce using rule 17 (expresion -> expresion MULT expresion .)
    MAS             reduce using rule 17 (expresion -> expresion MULT expresion .)
    MENOS           reduce using rule 17 (expresion -> expresion MULT expresion .)
    MULT            reduce using rule 17 (expresion -> expresion MULT expresion .)
    DIV             reduce using rule 17 (expresion -> expresion MULT expresion .)
    MOD             reduce using rule 17 (expresion -> expresion MULT expresion .)

  ! MAS             [ shift and go to state 24 ]
  ! MENOS           [ shift and go to state 25 ]
  ! MULT            [ shift and go to state 26 ]
  ! DIV             [ shift and go to state 27 ]
  ! MOD             [ shift and go to state 28 ]


state 33

    (18) expresion -> expresion DIV expresion .
    (15) expresion -> expresion . MAS expresion
    (16) expresion -> expresion . MENOS expresion
    (17) expresion -> expresion . MULT expresion
    (18) expresion -> expresion . DIV expresion
    (19) expresion -> expresion . MOD expresion

    PUNTOYCOMA      reduce using rule 18 (expresion -> expresion DIV expresion .)
    MAS             reduce using rule 18 (expresion -> expresion DIV expresion .)
    MENOS           reduce using rule 18 (expresion -> expresion DIV expresion .)
    MULT            reduce using rule 18 (expresion -> expresion DIV expresion .)
    DIV             reduce using rule 18 (expresion -> expresion DIV expresion .)
    MOD             reduce using rule 18 (expresion -> expresion DIV expresion .)

  ! MAS             [ shift and go to state 24 ]
  ! MENOS           [ shift and go to state 25 ]
  ! MULT            [ shift and go to state 26 ]
  ! DIV             [ shift and go to state 27 ]
  ! MOD             [ shift and go to state 28 ]


state 34

    (19) expresion -> expresion MOD expresion .
    (15) expresion -> expresion . MAS expresion
    (16) expresion -> expresion . MENOS expresion
    (17) expresion -> expresion . MULT expresion
    (18) expresion -> expresion . DIV expresion
    (19) expresion -> expresion . MOD expresion

    PUNTOYCOMA      reduce using rule 19 (expresion -> expresion MOD expresion .)
    MAS             reduce using rule 19 (expresion -> expresion MOD expresion .)
    MENOS           reduce using rule 19 (expresion -> expresion MOD expresion .)
    MULT            reduce using rule 19 (expresion -> expresion MOD expresion .)
    DIV             reduce using rule 19 (expresion -> expresion MOD expresion .)
    MOD             reduce using rule 19 (expresion -> expresion MOD expresion .)

  ! MAS             [ shift and go to state 24 ]
  ! MENOS           [ shift and go to state 25 ]
  ! MULT            [ shift and go to state 26 ]
  ! DIV             [ shift and go to state 27 ]
  ! MOD             [ shift and go to state 28 ]


state 35

    (20) ciclo_for -> FOR LPAREN asignacion PUNTOYCOMA expresion . PUNTOYCOMA asignacion RPAREN LBRACE sentencias RBRACE
    (15) expresion -> expresion . MAS expresion
    (16) expresion -> expresion . MENOS expresion
    (17) expresion -> expresion . MULT expresion
    (18) expresion -> expresion . DIV expresion
    (19) expresion -> expresion . MOD expresion

    PUNTOYCOMA      shift and go to state 36
    MAS             shift and go to state 24
    MENOS           shift and go to state 25
    MULT            shift and go to state 26
    DIV             shift and go to state 27
    MOD             shift and go to state 28


state 36

    (20) ciclo_for -> FOR LPAREN asignacion PUNTOYCOMA expresion PUNTOYCOMA . asignacion RPAREN LBRACE sentencias RBRACE
    (10) asignacion -> . ID ASIGNACION expresion PUNTOYCOMA

    ID              shift and go to state 8

    asignacion                     shift and go to state 37

state 37

    (20) ciclo_for -> FOR LPAREN asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion . RPAREN LBRACE sentencias RBRACE

    RPAREN          shift and go to state 38


state 38

    (20) ciclo_for -> FOR LPAREN asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion RPAREN . LBRACE sentencias RBRACE

    LBRACE          shift and go to state 39


state 39

    (20) ciclo_for -> FOR LPAREN asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion RPAREN LBRACE . sentencias RBRACE
    (6) sentencias -> . sentencias sentencia
    (7) sentencias -> . sentencia
    (8) sentencia -> . asignacion
    (9) sentencia -> . ciclo_for
    (10) asignacion -> . ID ASIGNACION expresion PUNTOYCOMA
    (20) ciclo_for -> . FOR LPAREN asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion RPAREN LBRACE sentencias RBRACE

    ID              shift and go to state 8
    FOR             shift and go to state 11

    asignacion                     shift and go to state 9
    sentencias                     shift and go to state 40
    sentencia                      shift and go to state 7
    ciclo_for                      shift and go to state 10

state 40

    (20) ciclo_for -> FOR LPAREN asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion RPAREN LBRACE sentencias . RBRACE
    (6) sentencias -> sentencias . sentencia
    (8) sentencia -> . asignacion
    (9) sentencia -> . ciclo_for
    (10) asignacion -> . ID ASIGNACION expresion PUNTOYCOMA
    (20) ciclo_for -> . FOR LPAREN asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion RPAREN LBRACE sentencias RBRACE

    RBRACE          shift and go to state 41
    ID              shift and go to state 8
    FOR             shift and go to state 11

    asignacion                     shift and go to state 9
    sentencia                      shift and go to state 13
    ciclo_for                      shift and go to state 10

state 41

    (20) ciclo_for -> FOR LPAREN asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion RPAREN LBRACE sentencias RBRACE .

    ID              reduce using rule 20 (ciclo_for -> FOR LPAREN asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion RPAREN LBRACE sentencias RBRACE .)
    FOR             reduce using rule 20 (ciclo_for -> FOR LPAREN asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion RPAREN LBRACE sentencias RBRACE .)
    $end            reduce using rule 20 (ciclo_for -> FOR LPAREN asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion RPAREN LBRACE sentencias RBRACE .)
    RBRACE          reduce using rule 20 (ciclo_for -> FOR LPAREN asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion RPAREN LBRACE sentencias RBRACE .)

